# pnp-cli

./: .gitignore  Cargo.toml  cfg.jsonc
.github/: dependabot.yml
.github/workflows/: build.yml  format.yml
notes/: code.norg  deps.norg  specs.norg
src/: cli.rs  data.rs  database.rs  fs.rs  git.rs  handle.rs  lockfile.rs  main.rs  manager.rs  symlink.rs
templates/: cfg.jsonc
