[package]
name = "pnp"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "4.0.0"
colored = "2"
serde_json = "1.0.79"
chrono = "0.4.19"
filetime = "0.2.15"
anyhow = "1.0.55"
regex = { version = "1.5", default-features = false, features = ["std"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "3.1.1", features = ["cargo"] }
serde = { version = "1.0.136", features = ["derive"] }
json_comments = "0.2.0"

[profile.optimized]   # Size optimizations that hurt build speed
inherits = "release"  # Inherit from release profile
opt-level = "z"       # Optimize for execututable size
codegen-units = 1     # Build speed -> executable size
